--- a/index.html
+++ b/index.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simulador de Ahorro </title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Simulador de Ahorro Mensual</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <h1>Simulador de Ahorro Mensual</h1>
+  <div class="container">
+    <h2>Simulador de Ahorro Mensual</h2>
+    <label for="ahorro">¿Cuánto puedes ahorrar mensualmente?</label>
+    <input type="number" id="ahorro" placeholder="Ej: 100000" />
 
-    <form id="formulario">
-        <label for="ingresos">Ingresos Mensuales:</label>
-        <input type="number" id="ingresos" required><br>
+    <label for="meses">¿Durante cuántos meses ahorrarás?</label>
+    <input type="number" id="meses" placeholder="Ej: 12" />
 
-        <label for="gastos">Gastos Mensuales:</label>
-        <input type="number" id="gastos" required><br>
+    <button onclick="calcularAhorro()">Calcular Ahorro Total</button>
 
-        <button type="submit">Calcular Ahorro</button>
-    </form>
+    <p id="resultado"></p>
+  </div>
 
-    <div id="resultado"></div>
+  <script>
+    function calcularAhorro() {
+      const ahorro = parseFloat(document.getElementById('ahorro').value);
+      const meses = parseInt(document.getElementById('meses').value);
+      const resultado = document.getElementById('resultado');
 
-    <script src="script.js"></script>
+      if (isNaN(ahorro) || isNaN(meses) || ahorro <= 0 || meses <= 0) {
+        resultado.textContent = "Por favor, ingresa valores válidos.";
+        return;
+      }
+
+      const total = ahorro * meses;
+      resultado.textContent = `Tu ahorro total será de $${total.toLocaleString('es-CO')}`;
+    }
+  </script>
 </body>
 </html>
