--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <div class="container">
     <h2>Simulador de Ahorro Mensual</h2>
+    
     <label for="ahorro">¿Cuánto puedes ahorrar mensualmente?</label>
     <input type="number" id="ahorro" placeholder="Ej: 100000" />
 
@@ -20,20 +21,6 @@
     <p id="resultado"></p>
   </div>
 
-  <script>
-    function calcularAhorro() {
-      const ahorro = parseFloat(document.getElementById('ahorro').value);
-      const meses = parseInt(document.getElementById('meses').value);
-      const resultado = document.getElementById('resultado');
-
-      if (isNaN(ahorro) || isNaN(meses) || ahorro <= 0 || meses <= 0) {
-        resultado.textContent = "Por favor, ingresa valores válidos.";
-        return;
-      }
-
-      const total = ahorro * meses;
-      resultado.textContent = `Tu ahorro total será de $${total.toLocaleString('es-CO')}`;
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
