--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="container">
     <h1>Simulador de Ahorro Mensual</h1>
 
-    <label for="ingreso">¿Cuánto ganas al mes?</label>
+    <h3>¿Cuánto ganas al mes?</h3>
     <input type="number" id="ingreso" placeholder="Ej: 1500000" oninput="formatearIngreso()" />
     <p id="ingresoFormateado"></p>
 
