--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       margin-top: 10px;
     }
     .btn-eliminar {
-      color: red; /* Cambia a cualquier color: red, blue, #00ff00, etc. */
+      color: white; 
       background: transparent;
       border: none;
       font-size: 18px;
