--- a/index.html
+++ b/index.html
@@ -43,16 +43,9 @@
       justify-content: center;
       margin-top: 10px;
     }
-    .btn-eliminar {
-      color: white; 
-      background: transparent;
-      border: none;
-      font-size: 18px;
-      cursor: pointer;
-    }
 
     button {
-      background-color: #ff3333;
+      background-color: #ffffff;
       border: none;
       color: white;
       padding: 10px 20px;
