--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     }
 
     button {
-      background-color: #ffffff;
+      background-color: #ff3333;
       border: none;
       color: white;
       padding: 10px 20px;
@@ -54,7 +54,7 @@
     }
 
     button:hover {
-      background-color: #cc0000;
+      background-color: #ffffff;
     }
 
     .gasto-item {
