--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       margin-bottom: 10px;
     }
     .btn-eliminar {
-      color: red;
-      background: transparent;
+      color: white;
+      background: #ff3333;
       border: none;
       font-size: 16px;
       cursor: pointer;
