--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" type="image/png" href="Ahorro.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simulador de Ahorro</title>
+  <title>Simulador de Ahorro Mensual</title>
   <style>
     body {
       background-color: #000000;
