--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       display: flex;
       justify-content: center;
       margin-top: 10px;
+      gap: 10px;
     }
 
     button {
@@ -76,12 +77,13 @@
       margin: 5px 0;
     }
 
-    #ingresoFormateado {
+    #ingresoFormateado, #valorGastoFormateado {
       font-size: 14px;
       color: #bbbbbb;
       margin-top: -10px;
       margin-bottom: 10px;
     }
+
     .btn-eliminar {
       color: white;
       background: #ff3333;
@@ -108,14 +110,11 @@
       <input type="number" placeholder="Valor del gasto" id="valorGasto" oninput="formatearValorGasto()" />
     </div>
     <p id="valorGastoFormateado"></p>
+
     <div class="btn-center">
       <button onclick="agregarGasto()">Agregar gasto</button>
-    </div>
-    <div class="btn-center">
       <button onclick="mostrarComparacion()">Ver comparación por meses</button>
     </div>
-    
-    <div id="tablaComparacion"></div>
 
     <div id="gastos"></div>
 
@@ -124,11 +123,12 @@
     </div>
 
     <div id="resultado"></div>
+    <div id="tablaComparacion"></div>
   </div>
 
   <script>
     let listaGastos = [];
-    let historialMensual = [];
+    let registrosMensuales = [];
 
     function formatearIngreso() {
       const ingresoInput = document.getElementById('ingreso');
@@ -141,6 +141,7 @@
         ingresoFormateado.textContent = '';
       }
     }
+
     function formatearValorGasto() {
       const valorInput = document.getElementById('valorGasto');
       const valorFormateado = document.getElementById('valorGastoFormateado');
@@ -187,6 +188,13 @@
 
     function calcularAhorro() {
       const ingreso = parseFloat(document.getElementById('ingreso').value);
+      const mesRegistro = document.getElementById('mesRegistro').value;
+
+      if (!mesRegistro) {
+        alert('Por favor ingresa el mes del registro.');
+        return;
+      }
+
       if (isNaN(ingreso) || ingreso <= 0) {
         alert('Por favor ingresa un ingreso mensual válido.');
         return;
@@ -195,15 +203,14 @@
       const totalGastos = listaGastos.reduce((total, gasto) => total + gasto.valor, 0);
       const ahorro = ingreso - totalGastos;
 
-      const mesActual = new Date().toLocalDateString('es-CO', { month: 'long', year: 'numeric'});
-
       registrosMensuales.push({
-        mes: mesActual,
+        mes: mesRegistro,
         ingreso,
         gastos: [...listaGastos],
         totalGastos,
         ahorro
       });
+
       let mensaje = `
         Ingreso mensual: $${ingreso.toLocaleString('es-CO')}<br>
         Total de gastos: $${totalGastos.toLocaleString('es-CO')}<br>
@@ -213,45 +220,48 @@
         mensaje += `<span style="color: red;">Estás gastando más de lo que ganas. Déficit de $${Math.abs(ahorro).toLocaleString('es-CO')}</span>`;
       } else {
         mensaje += `Puedes ahorrar: <span style="color: #28a745;">$${ahorro.toLocaleString('es-CO')}</span>`;
-    }
+      }
 
       document.getElementById('resultado').innerHTML = mensaje;
     }
+
     function mostrarComparacion() {
       const contenedor = document.getElementById('tablaComparacion');
       if (registrosMensuales.length === 0) {
         contenedor.innerHTML = '<p style="color: yellow;">No hay datos guardados para comparar.</p>';
         return;
       }
+
       let tablaHTML = `
-      <h3>Comparación Mensual</h3>
-      <table border="1" style="width:100%; border-collapse: collapse; background: #333; color: #fff;">
-      <thead>
-      <tr>
-          <th>Mes</th>
-          <th>Ingreso</th>
-          <th>Total Gastos</th>
-          <th>Ahorro</th>
-      </tr>
-      </thead>
-      <tbody>
+        <h3>Comparación Mensual</h3>
+        <table border="1" style="width:100%; border-collapse: collapse; background: #333; color: #fff;">
+          <thead>
+            <tr>
+              <th>Mes</th>
+              <th>Ingreso</th>
+              <th>Total Gastos</th>
+              <th>Ahorro</th>
+            </tr>
+          </thead>
+          <tbody>
       `;
+
       registrosMensuales.forEach(reg => {
         tablaHTML += `
-        <tr>
-          <td>${reg.mes}</td>
-          <td>$${reg.ingreso.toLocaleString('es-CO')}</td>
-          <td>$${reg.totalGastos.toLocaleString('es-CO')}</td>
-          <td style="color: ${reg.ahorro < 0 ? 'red' : 'lightgreen'}">
-        $${reg.ahorro.toLocaleString('es-CO')}
-        </td>
-        </tr>
+          <tr>
+            <td>${reg.mes}</td>
+            <td>$${reg.ingreso.toLocaleString('es-CO')}</td>
+            <td>$${reg.totalGastos.toLocaleString('es-CO')}</td>
+            <td style="color: ${reg.ahorro < 0 ? 'red' : 'lightgreen'}">
+              $${reg.ahorro.toLocaleString('es-CO')}
+            </td>
+          </tr>
         `;
-      }); 
-      tablaHTML += `
-      </tbody>
-      </table>
-      `;
+      });
+
+      tablaHTML += `</tbody></table>`;
       contenedor.innerHTML = tablaHTML;
     }
-
+  </script>
+</body>
+</html>
