--- a/index.html
+++ b/index.html
@@ -346,10 +346,56 @@
           </tr>`;
       });
 
-      html += `</tbody></table>`;
-      tabla.innerHTML = html;
+  function mostrarGraficas() {
+    const ahorroCanvas = document.getElementById('graficoAhorro');
+    const pastelCanvas = document.getElementById('graficoGastosAhorro');
+
+    // Destruir gráficas anteriores si existen
+    Chart.getChart(ahorroCanvas)?.destroy();
+    Chart.getChart(pastelCanvas)?.destroy();
+
+    // Gráfico de barras
+    const etiquetas = registrosMensuales.map(r => r.mes);
+    const datosAhorro = registrosMensuales.map(r => r.ahorro);
+
+    new Chart(ahorroCanvas, {
+      type: 'bar',
+      data: {
+        labels: etiquetas,
+        datasets: [{
+          label: 'Ahorro mensual',
+          data: datosAhorro,
+          backgroundColor: 'lightgreen',
+          borderColor: 'green',
+          borderWidth: 1
+        }]
+      },
+      options: {
+        scales: {
+          y: { beginAtZero: true }
+        }
+      }
+    });
+
+    // Gráfico de pastel
+    if (registrosMensuales.length > 0) {
+      const ultimo = registrosMensuales[registrosMensuales.length - 1];
+      new Chart(pastelCanvas, {
+        type: 'pie',
+        data: {
+          labels: ['Gastos', 'Ahorro'],
+          datasets: [{
+            data: [ultimo.totalGastos, ultimo.ahorro],
+            backgroundColor: ['#ff3333', '#00cc66']
+          }]
+        }
+      });
     }
-  </script>
+  }
+
+  mostrarSeccion('registro');
+</script>
+
 </body>
-</html>
+</html
 
