--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <link rel="icon" type="image/png" href="Ahorro.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Simulador de Ahorro Mensual</title>
+    <title>Simulador de Ahorro Mensual</title>
   <style>
     body {
+      background-color: #000000;
+      color: #ffffff;
       background-color: #000;
       color: #fff;
       font-family: Arial, sans-serif;
@@ -58,80 +60,18 @@
     }
 
     .container {
+      max-width: 600px;
+      margin: 0 auto;
       max-width: 700px;
       margin: auto;
       background-color: #1c1c1c;
       padding: 20px;
+      border-radius: 10px;
       border-radius: 10px solid #ffffff;
     }
 
     h1 {
-      color: red;
-      text-align: center;
-    }
-
-    label, h3 {
-      color: #00ccff;
-    }
-
-    input[type="number"], input[type="text"] {
-      width: 100%;
-      padding: 8px;
-      margin: 6px 0 12px;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .btn-center {
-      display: flex;
-      justify-content: center;
-      margin-top: 10px;
-      gap: 10px;
-    }
-
-    button {
-      background-color: #ff3333;
-      border: none;
-      color: white;
-      padding: 10px 20px;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color: #cc0000;
-    }
-
-    .gasto-item {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-
-    .gasto-item input {
-      flex: 1;
-    }
-
-    #resultado {
-      margin-top: 20px;
-      font-weight: bold;
-    }
-
-    #gastos p {
-      margin: 5px 0;
-    }
-
-    #ingresoFormateado, #valorGastoFormateado {
-      font-size: 14px;
-      color: #bbbbbb;
-      margin-top: -10px;
-      margin-bottom: 10px;
-    }
-
-    .btn-eliminar {
-      color: white;
-      background: #ff3333;
-      border: none;
+@@ -91,67 +135,112 @@
       font-size: 16px;
       cursor: pointer;
     }
@@ -178,7 +118,11 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <h1>Simulador de Ahorro Mensual</h1>
 
+    <h3>Mes del registro</h3>
+    <input type="text" id="mesRegistro" placeholder="Ej: Marzo 2025" />
   <!-- Menú lateral -->
   <div class="sidebar">
     <h2>Menú</h2>
@@ -187,14 +131,27 @@
     <button onclick="mostrarSeccion('graficas')">Gráficas</button>
   </div>
 
+    <h3>¿Cuánto ganas al mes?</h3>
+    <input type="number" id="ingreso" placeholder="Ej: 1500000" oninput="formatearIngreso()" />
+    <p id="ingresoFormateado"></p>
   <!-- Contenido principal -->
   <div class="main-content">
     <div class="container" id="inicio">
       <h1>Simulador de Ahorro Mensual</h1>
 
+    <h3>Gastos Mensuales</h3>
+    <div class="gasto-item">
+      <input type="text" placeholder="Nombre del gasto" id="nombreGasto" />
+      <input type="number" placeholder="Valor del gasto" id="valorGasto" oninput="formatearValorGasto()" />
+    </div>
+    <p id="valorGastoFormateado"></p>
       <h3>Mes del registro</h3>
       <input type="text" id="mesRegistro" placeholder="Ej: Marzo 2025" />
 
+    <div class="btn-center">
+      <button onclick="agregarGasto()">Agregar gasto</button>
+      <button onclick="mostrarComparacion()">Ver comparación por meses</button>
+    </div>
       <h3>¿Cuánto ganas al mes?</h3>
       <input type="number" id="ingreso" placeholder="Ej: 1500000" oninput="formatearIngreso()" />
       <p id="ingresoFormateado"></p>
@@ -206,10 +163,13 @@
       </div>
       <p id="valorGastoFormateado"></p>
 
+    <div id="gastos"></div>
       <div class="btn-center">
         <button onclick="agregarGasto()">Agregar gasto</button>
       </div>
 
+    <div class="btn-center">
+      <button onclick="calcularAhorro()">Calcular Ahorro</button>
       <div id="gastos"></div>
 
       <div class="btn-center">
@@ -219,6 +179,8 @@
       <div id="resultado"></div>
     </div>
 
+    <div id="resultado"></div>
+    <div id="tablaComparacion"></div>
     <div class="container" id="tablaComparacion" style="display:none;"></div>
 
     <div class="container" id="seccionGraficas" style="display:none;">
@@ -232,68 +194,80 @@
     let registrosMensuales = [];
 
     function formatearIngreso() {
+      const ingresoInput = document.getElementById('ingreso');
+      const ingresoFormateado = document.getElementById('ingresoFormateado');
+      const valor = parseFloat(ingresoInput.value);
+
+      if (!isNaN(valor)) {
+        ingresoFormateado.textContent = `Ingreso escrito: $${valor.toLocaleString('es-CO')}`;
+      } else {
+        ingresoFormateado.textContent = '';
+      }
       const ingreso = parseFloat(document.getElementById('ingreso').value);
       document.getElementById('ingresoFormateado').textContent =
         isNaN(ingreso) ? '' : `Ingreso escrito: $${ingreso.toLocaleString('es-CO')}`;
     }
 
     function formatearValorGasto() {
+      const valorInput = document.getElementById('valorGasto');
+      const valorFormateado = document.getElementById('valorGastoFormateado');
+      const valor = parseFloat(valorInput.value);
+
+      if (!isNaN(valor)) {
+        valorFormateado.textContent = `Valor escrito: $${valor.toLocaleString('es-CO')}`;
+      } else {
+        valorFormateado.textContent = '';
+      }
       const valor = parseFloat(document.getElementById('valorGasto').value);
       document.getElementById('valorGastoFormateado').textContent =
         isNaN(valor) ? '' : `Valor escrito: $${valor.toLocaleString('es-CO')}`;
     }
 
     function agregarGasto() {
-      const nombre = document.getElementById('nombreGasto').value;
-      const valor = parseFloat(document.getElementById('valorGasto').value);
-
-      if (!nombre || isNaN(valor) || valor <= 0) {
-        alert('Por favor ingresa un nombre de gasto y un valor válido.');
-        return;
-      }
-
-      listaGastos.push({ nombre, valor });
-
-      document.getElementById('nombreGasto').value = '';
-      document.getElementById('valorGasto').value = '';
-      document.getElementById('valorGastoFormateado').textContent = '';
-
-      mostrarGastos();
-    }
-
-    function mostrarGastos() {
-      const contenedor = document.getElementById('gastos');
+@@ -177,7 +266,7 @@ <h3>Gastos Mensuales</h3>
       contenedor.innerHTML = '';
       listaGastos.forEach((gasto, index) => {
         contenedor.innerHTML += `<p>${gasto.nombre}: $${gasto.valor.toLocaleString('es-CO')} 
+          <button class="btn-eliminar" onclick="eliminarGasto(${index})">X</button></p>`;
         <button class="btn-eliminar" onclick="eliminarGasto(${index})">X</button></p>`;
       });
     }
 
-    function eliminarGasto(index) {
-      listaGastos.splice(index, 1);
-      mostrarGastos();
-    }
+@@ -188,80 +277,79 @@ <h3>Gastos Mensuales</h3>
 
     function calcularAhorro() {
       const ingreso = parseFloat(document.getElementById('ingreso').value);
+      const mesRegistro = document.getElementById('mesRegistro').value;
       const mes = document.getElementById('mesRegistro').value;
 
+      if (!mesRegistro) {
+        alert('Por favor ingresa el mes del registro.');
       if (!mes || isNaN(ingreso) || ingreso <= 0) {
         alert('Completa los campos correctamente.');
         return;
       }
 
+      if (isNaN(ingreso) || ingreso <= 0) {
+        alert('Por favor ingresa un ingreso mensual válido.');
+        return;
+      }
+
+      const totalGastos = listaGastos.reduce((total, gasto) => total + gasto.valor, 0);
       const totalGastos = listaGastos.reduce((acc, g) => acc + g.valor, 0);
       const ahorro = ingreso - totalGastos;
 
       registrosMensuales.push({
+        mes: mesRegistro,
         mes,
         ingreso,
+        gastos: [...listaGastos],
         totalGastos,
         ahorro
       });
 
+      let mensaje = `
+        Ingreso mensual: $${ingreso.toLocaleString('es-CO')}<br>
+        Total de gastos: $${totalGastos.toLocaleString('es-CO')}<br>
       const resultado = document.getElementById('resultado');
       resultado.innerHTML = `
         Ingreso: $${ingreso.toLocaleString('es-CO')}<br>
@@ -304,24 +278,46 @@
       `;
     }
 
+      if (ahorro < 0) {
+        mensaje += `<span style="color: red;">Estás gastando más de lo que ganas. Déficit de $${Math.abs(ahorro).toLocaleString('es-CO')}</span>`;
+      } else {
+        mensaje += `Puedes ahorrar: <span style="color: #28a745;">$${ahorro.toLocaleString('es-CO')}</span>`;
+      }
     function mostrarSeccion(seccion) {
       document.getElementById('inicio').style.display = seccion === 'inicio' ? 'block' : 'none';
       document.getElementById('tablaComparacion').style.display = seccion === 'tabla' ? 'block' : 'none';
       document.getElementById('seccionGraficas').style.display = seccion === 'graficas' ? 'block' : 'none';
 
+      document.getElementById('resultado').innerHTML = mensaje;
       if (seccion === 'tabla') {
         generarTabla();
       }
     }
 
+    function mostrarComparacion() {
+      const contenedor = document.getElementById('tablaComparacion');
     function generarTabla() {
       const tabla = document.getElementById('tablaComparacion');
 
       if (registrosMensuales.length === 0) {
+        contenedor.innerHTML = '<p style="color: yellow;">No hay datos guardados para comparar.</p>';
         tabla.innerHTML = '<p style="color: yellow;">No hay datos guardados para comparar.</p>';
         return;
       }
 
+      let tablaHTML = `
+        <h3>Comparación Mensual</h3>
+        <table border="1" style="width:100%; border-collapse: collapse; background: #333; color: #fff;">
+          <thead>
+            <tr>
+              <th>Mes</th>
+              <th>Ingreso</th>
+              <th>Total Gastos</th>
+              <th>Ahorro</th>
+            </tr>
+          </thead>
+          <tbody>
+      `;
       let html = `<h3>Comparación Mensual</h3>
       <table>
         <thead>
@@ -335,67 +331,26 @@
         <tbody>`;
 
       registrosMensuales.forEach(reg => {
+        tablaHTML += `
         html += `
           <tr>
             <td>${reg.mes}</td>
             <td>$${reg.ingreso.toLocaleString('es-CO')}</td>
             <td>$${reg.totalGastos.toLocaleString('es-CO')}</td>
+            <td style="color: ${reg.ahorro < 0 ? 'red' : 'lightgreen'}">
             <td style="color: ${reg.ahorro >= 0 ? 'lightgreen' : 'red'};">
               $${reg.ahorro.toLocaleString('es-CO')}
             </td>
+          </tr>
+        `;
           </tr>`;
       });
 
-  function mostrarGraficas() {
-    const ahorroCanvas = document.getElementById('graficoAhorro');
-    const pastelCanvas = document.getElementById('graficoGastosAhorro');
-
-    // Destruir gráficas anteriores si existen
-    Chart.getChart(ahorroCanvas)?.destroy();
-    Chart.getChart(pastelCanvas)?.destroy();
-
-    // Gráfico de barras
-    const etiquetas = registrosMensuales.map(r => r.mes);
-    const datosAhorro = registrosMensuales.map(r => r.ahorro);
-
-    new Chart(ahorroCanvas, {
-      type: 'bar',
-      data: {
-        labels: etiquetas,
-        datasets: [{
-          label: 'Ahorro mensual',
-          data: datosAhorro,
-          backgroundColor: 'lightgreen',
-          borderColor: 'green',
-          borderWidth: 1
-        }]
-      },
-      options: {
-        scales: {
-          y: { beginAtZero: true }
-        }
-      }
-    });
-
-    // Gráfico de pastel
-    if (registrosMensuales.length > 0) {
-      const ultimo = registrosMensuales[registrosMensuales.length - 1];
-      new Chart(pastelCanvas, {
-        type: 'pie',
-        data: {
-          labels: ['Gastos', 'Ahorro'],
-          datasets: [{
-            data: [ultimo.totalGastos, ultimo.ahorro],
-            backgroundColor: ['#ff3333', '#00cc66']
-          }]
-        }
-      });
+      tablaHTML += `</tbody></table>`;
+      contenedor.innerHTML = tablaHTML;
+      html += `</tbody></table>`;
+      tabla.innerHTML = html;
     }
-  }
-
-  mostrarSeccion('registro');
-</script>
-
+  </script>
 </body>
-</html
-
+</html>
