--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <input type="text" id="mesRegistro" placeholder="Ej: Marzo 2025" />
 
       <h3>¿Cuánto ganas al mes?</h3>
-      <input type="number" id="ingreso" placeholder="Ej: 1500000" oninput="formatearIngreso()" />
+      <input type="number" id="ingreso" placeholder="Ej: 1500000" oninput="formatearIngreso"() />
       <p id="ingresoFormateado"></p>
 
       <h3>Gastos Mensuales</h3>
