--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     .sidebar button {
       background-color: #ff3333;
-      color: red;
+      color: white;
       border: none;
       padding: 10px;
       cursor: pointer;
