--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     .sidebar button {
-      background-color: #ff3333;
+      background-color: red;
       color: white;
       border: none;
       padding: 10px;
