--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       display: flex;
       flex-direction: column;
       gap: 20px;
-      border-right: 4px solid #ff3333;
+      border-right: 2px solid red;
     }
 
     .sidebar h2 {
