--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     /* ====== MENÚ LATERAL ====== */
     .sidebar {
-      width: 180px;
+      width: 150px;
       background-color: #1c1c1c;
       padding: 20px;
       height: 100vh;
@@ -26,8 +26,8 @@
       top: 0;
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      border-right: 2px solid red;
+      gap: 20px;
+      border-right: 3px solid red;
     }
 
     .sidebar h2 {
@@ -90,7 +90,7 @@
     }
 
     button {
-      background-color: #ff3333;
+      background-color: red;
       border: none;
       color: white;
       padding: 10px 20px;
