--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
     .btn-eliminar {
       color: white;
-      background: #ff3333;
+      background: red;
       border: none;
       font-size: 16px;
       cursor: pointer;
